--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.16.0",
     "chai": "^3.5.0",
     "concurrently": "^2.2.0",
+    "html-webpack-plugin": "^2.22.0",
     "nyc": "^8.1.0",
     "on-build-webpack": "^0.1.0",
     "progress-bar-webpack-plugin": "^1.9.0",
