--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "webpack": "^1.13.2"
   },
   "scripts": {
-    "browser-sync": "browser-sync start --config browser-sync.config.js",
+    "browser-sync": "node ./browser-sync.config.js",
     "local": "concurrently 'npm run browser-sync' 'npm run watch'",
     "start": "npm run local",
     "test": "concurrently 'nyc --reporter=lcov --reporter=text ava --verbose test/unit/*.spec.js' 'standard'",
-    "watch": "concurrently 'npm run webpack -- -w' 'onchange '**/*.js' -- standard'",
-    "webpack": "webpack"
+    "watch": "concurrently 'npm run webpack -- --watch' 'onchange \"**/*.js\" -- standard'",
+    "webpack": "webpack --colors"
   },
   "repository": {
     "type": "git",
