--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "webpack": "^1.13.2"
   },
   "scripts": {
+    "build": "concurrently 'rm -rf build && mkdir build' 'npm test' && concurrently 'npm run webpack -- -p' 'npm run build:bootstrap'",
+    "build:bootstrap": "cp ./node_modules/bootstrap/dist/css/bootstrap*.min.css build/",
     "browser-sync": "node ./browser-sync.config.js",
     "local": "concurrently 'npm run browser-sync' 'npm run watch'",
     "start": "npm run local",
