--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "handlebars": "^4.0.5",
     "jquery": "^3.1.0",
     "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0"
   },
@@ -18,6 +19,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-lodash": "^3.2.8",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
     "browser-sync": "^2.16.0",
     "chai": "^3.5.0",
@@ -66,7 +68,8 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ],
     "plugins": [
       "lodash"
