--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.5.8",
+    "autobind-decorator": "^1.3.3",
     "bootstrap": "^3.3.7",
     "handlebars": "^4.0.5",
     "jquery": "^3.1.0",
@@ -18,6 +19,7 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-lodash": "^3.2.8",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
@@ -72,7 +74,8 @@
       "react"
     ],
     "plugins": [
-      "lodash"
+      "lodash",
+      "transform-decorators-legacy"
     ]
   },
   "standard": {
