--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "angular": "^1.5.8",
     "autobind-decorator": "^1.3.3",
     "bootstrap": "^3.3.7",
-    "handlebars": "^4.0.5",
-    "jquery": "^3.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "vue": "^1.0.27"
   },
   "devDependencies": {
     "ava": "^0.16.0",
@@ -27,7 +26,9 @@
     "browser-sync": "^2.16.0",
     "chai": "^3.5.0",
     "concurrently": "^2.2.0",
+    "glob": "^7.1.0",
     "html-webpack-plugin": "^2.22.0",
+    "lodash": "^4.16.1",
     "nyc": "^8.1.0",
     "on-build-webpack": "^0.1.0",
     "onchange": "^3.0.2",
