--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "webpack": "^1.13.2"
   },
   "scripts": {
-    "build": "npm run mkdir && COMPRESS=true concurrently 'npm run webpack -- -p' 'npm run copy'",
+    "build": "npm run mkdir && COMPRESS=true concurrently 'npm test' 'npm run webpack -- -p' 'npm run copy'",
     "browser-sync": "node ./browser-sync.config.js",
     "copy": "concurrently 'npm run copy:bootstrap'",
     "copy:bootstrap": "cp ./node_modules/bootstrap/dist/css/bootstrap*.min.css build/",
