--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A simple Redux-backed counter with different front ends",
   "main": "index.js",
   "dependencies": {
+    "@angular/common": "^2.0.1",
+    "@angular/compiler": "^2.0.1",
+    "@angular/core": "^2.0.1",
+    "@angular/platform-browser": "^2.0.1",
+    "@angular/platform-browser-dynamic": "^2.0.1",
     "angular": "^1.5.8",
     "autobind-decorator": "^1.3.3",
     "bootstrap": "^3.3.7",
@@ -11,9 +16,13 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
-    "vue": "^1.0.27"
+    "rxjs": "^5.0.0-beta.12",
+    "vue": "^1.0.27",
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.41",
     "ava": "^0.16.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
@@ -38,6 +47,8 @@
     "redux-devtools": "^3.3.1",
     "sinon": "^1.17.5",
     "standard": "^8.1.0",
+    "ts-loader": "^0.8.2",
+    "typescript": "^2.0.3",
     "webpack": "^1.13.2"
   },
   "scripts": {
