--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "nyc": "^8.1.0",
     "on-build-webpack": "^0.1.0",
     "onchange": "^3.0.2",
-    "progress-bar-webpack-plugin": "^1.9.0",
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "redux-devtools": "^3.3.1",
+    "rimraf": "^2.5.4",
     "sinon": "^1.17.5",
     "standard": "^8.1.0",
     "ts-loader": "^0.8.2",
@@ -58,11 +58,11 @@
     "copy:bootstrap": "cp ./node_modules/bootstrap/dist/css/bootstrap*.min.css build/",
     "deploy": "npm run build && bash ./deploy.sh",
     "local": "npm run mkdir && concurrently 'npm run browser-sync' 'npm run copy' 'npm run watch'",
-    "mkdir": "rm -rf build && mkdir build",
+    "mkdir": "rimraf build && mkdir build && echo '<html><body>Loading, yo...</body></html>' > build/index.html",
     "start": "npm run local",
     "test": "concurrently 'nyc --reporter=lcov --reporter=text ava --verbose test/unit/**/*.spec.js' 'standard'",
-    "watch": "concurrently 'npm run webpack -- --watch' 'onchange \"**/*.js\" -- standard'",
-    "webpack": "webpack --colors"
+    "watch": "concurrently 'npm run webpack -- --watch -d' 'onchange \"**/*.js\" -- standard'",
+    "webpack": "webpack --progress --colors"
   },
   "repository": {
     "type": "git",
