--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.12",
     "vue": "^1.0.27",
     "zone.js": "^0.6.25"
@@ -24,6 +25,7 @@
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.41",
     "ava": "^0.16.0",
+    "awesome-typescript-loader": "^2.2.4",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
