--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,21 @@
 {
   "compilerOptions": {
+    "declaration": false,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "mapRoot": "./",
+    "module": "es6",
     "moduleResolution": "node",
+    "noEmitOnError": true,
+    "noImplicitAny": false,
+    "outDir": "../dist/out-tsc",
     "sourceMap": true,
-    "target": "es6",
-    "types": ["node"]
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "target": "es5",
+    "typeRoots": [
+      "../node_modules/@types"
+    ],
+    "types": [
+      "core-js"
+    ]
+  }
 }
