--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@angular/common": "^2.0.1",
     "@angular/compiler": "^2.0.1",
     "@angular/core": "^2.0.1",
+    "@angular/forms": "^2.0.1",
     "@angular/platform-browser": "^2.0.1",
     "@angular/platform-browser-dynamic": "^2.0.1",
     "angular": "^1.5.8",
@@ -49,7 +50,6 @@
     "rimraf": "^2.5.4",
     "sinon": "^1.17.5",
     "standard": "^8.1.0",
-    "ts-loader": "^0.8.2",
     "typescript": "^2.0.3",
     "webpack": "^1.13.2"
   },
