--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@angular/platform-browser": "^2.0.1",
     "@angular/platform-browser-dynamic": "^2.0.1",
     "angular": "^1.5.8",
+    "aurelia-framework": "^1.0.6",
     "autobind-decorator": "^1.3.3",
+    "babel-polyfill": "^6.16.0",
     "bootstrap": "^3.3.7",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
@@ -32,8 +34,10 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-lodash": "^3.2.8",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-regenerator": "^6.16.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.14.0",
     "browser-sync": "^2.16.0",
     "chai": "^3.5.0",
@@ -91,11 +95,14 @@
   "babel": {
     "presets": [
       "es2015",
-      "react"
+      "react",
+      "stage-0"
     ],
     "plugins": [
       "lodash",
-      "transform-decorators-legacy"
+      "transform-async-to-generator",
+      "transform-decorators-legacy",
+      "transform-regenerator"
     ]
   },
   "nyc": {
